# code-pair-partner

./: 000.txt  code_pair_partner.py  hello.py  mcp_github.py  mcp_server.py  mcp_tools.py  pyproject.toml
crewai__pair_partner/: README.md  pyproject.toml
crewai__pair_partner/knowledge/: user_preference.txt
crewai__pair_partner/src/pair_partner/: crew.py  main.py
crewai__pair_partner/src/pair_partner/config/: agents.yaml  tasks.yaml
crewai__pair_partner/src/pair_partner/tests/unit/: test_new_feature.py
crewai__pair_partner/src/pair_partner/tools/: mcpx_tools.py
