[project]
name = "pair_partner"
version = "0.1.0"
description = "pair_partner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
pair_partner = "pair_partner.main:run"
run_crew = "pair_partner.main:run"
train = "pair_partner.main:train"
replay = "pair_partner.main:replay"
test = "pair_partner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
